[package]
name = "vnt-hub"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
async-trait = "0.1"
axum = { version = "0.6", features = ["headers", "json", "ws"] }
base64 = "0.21"
base64ct = "=1.6.0"
chacha20poly1305 = "0.10"
chrono = { version = "=0.4.38", features = ["serde"] }
clap = { version = "=4.5.4", features = ["derive"] }
crc = "=3.0.1"
futures-util = "0.3"
hex = "0.4"
http = "0.2"
hyper = { version = "0.14", features = ["full"] }
indexmap = "=2.2.6"
log = "0.4"
log4rs = "=1.3.0"
rand = "0.8"
rcgen = { version = "=0.13.2", default-features = false, features = ["aws_lc_rs", "pem"] }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.7", default-features = false, features = ["sqlite", "runtime-tokio", "macros"] }
tempfile = "=3.10.1"
time = "=0.3.36"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-rustls = "0.26"
tower = "0.4"
unicode-segmentation = "=1.11.0"
url = "=2.5.0"
uuid = { version = "=1.8.0", features = ["v4", "serde"] }

[target.x86_64-pc-windows-msvc.build-dependencies]
thunk-rs = { version = "0.3.5", features = ["win7"] }

[target.i686-pc-windows-msvc.build-dependencies]
thunk-rs = { version = "0.3.5", features = ["win7"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "debuginfo"
